suite/tests/goto/invalid/label-needs-statement.c
int main(void)
{
    //
    // a label must have a succeeding statement
    //
label:
}
